--- a/src/app/pages/lista-livros/lista-livros.component.html
+++ b/src/app/pages/lista-livros/lista-livros.component.html
@@ -14,36 +14,39 @@
     </div>
   </form>
   <p>Busque por assunto, autoria, nome...</p>
-  <section
-    role="alert"
-    class="resultados mensagem-erro"
-    *ngIf="mensagemErro"
-    aria-label="Mensagem de erro">
-      {{ mensagemErro }}
-  </section>
-  <section
-    class="resultados"
-    *ngIf="livrosEncontrados$ | async"
-    aria-label="Resultados da busca">
-      {{ livrosResultado.totalItems }} resultados encontrados
-  </section>
-  <ul
-    class="container-card"
-    *ngIf="livrosEncontrados$ | async as listaLivros, else telaInicial"
-    aria-label="Lista de livros encontrados">
-    <li *ngFor="let livro of listaLivros">
-      <app-livro [livro]="livro"></app-livro>
-    </li>
-  </ul>
-<ng-template #telaInicial>
-  <section
-    class="imagens"
-    aria-label="Página inicial">
-    <h1 class="titulo">Busque o livro <br> que quiser na <br> nossa estante!</h1>
-    <img
-      class="ilustracao"
-      src="assets/imagens/ilustracao-estante.png"
-      alt="Ilustração de uma pessoa em pé ao lado de uma estante com livros e plantas">
-  </section>
-</ng-template>
+  @if (mensagemErro) {
+    <section
+      role="alert"
+      class="resultados mensagem-erro"
+      aria-label="Mensagem de erro">
+        {{ mensagemErro }}
+    </section>
+  }
+  @if (livrosEncontrados$ | async) {
+    <section
+      class="resultados"
+      aria-label="Resultados da busca">
+        {{ livrosResultado.totalItems }} resultados encontrados
+    </section>
+  }
+  @if (livrosEncontrados$ | async) {
+    <ul class="container-card" aria-label="Lista de livros encontrados">
+    @for (livro of listaLivros; track livro.title) {
+      <li>
+        <app-livro [livro]="livro"></app-livro>
+      </li>
+    }
+    </ul>
+  } @else {
+      <section
+        class="imagens"
+        aria-label="Página inicial">
+        <h1 class="titulo">Busque o livro <br> que quiser na <br> nossa estante!</h1>
+        <img
+          class="ilustracao"
+          src="assets/imagens/ilustracao-estante.png"
+          alt="Ilustração de uma pessoa em pé ao lado de uma estante com livros e plantas">
+      </section>
+    }
+
 
