Ajustes control flow

--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -22,7 +22,7 @@
           placeholder="Digite seu nome completo"
           formControlName="nome"
           required>
-        @if (contatoForm.get(nome)?.errors?.[required]) {
+        @if (contatoForm.get('nome')?.errors?.['required']) {
           <span
             id="nome-erro"
             class="erro-mensagem">Nome obrigatório
@@ -40,18 +40,18 @@
           placeholder="Digite seu email"
           formControlName="email"
           required>
-        @if (contatoForm.get(email)?.errors?.[required]) {
-          <span
-            id="email-erro-required"
-            class="erro-mensagem">E-mail obrigatório
-          </span>
-        }
-        @if (contatoForm.get(email)?.errors?.[required]) {
-          <span
-            id="email-erro-email"
-            class="erro-mensagem">Formato de e-mail inválido
-          </span>
-        }
+          @if (contatoForm.get('email')?.errors?.['email']) {
+            <span
+              id="email-erro-email"
+              class="erro-mensagem">Formato de e-mail inválido
+            </span>
+          }
+          @if (contatoForm.get('email')?.errors?.['required']) {
+            <span
+              id="email-erro-required"
+              class="erro-mensagem">E-mail obrigatório
+            </span>
+          }
       </div>
 
       <div class="campo-form">
@@ -126,7 +126,7 @@
           placeholder="Digite sua mensagem"
           formControlName="mensagem"
           required></textarea>
-        @if (contatoForm.get(mensagem)?.errors?.[required]) {
+        @if (contatoForm.get('mensagem')?.errors?.['required']) {
           <span
             id="mensagem-erro"
             class="erro-mensagem">Mensagem obrigatória
