--- a/src/app/pages/lista-livros/lista-livros.component.html
+++ b/src/app/pages/lista-livros/lista-livros.component.html
@@ -22,31 +22,30 @@
         {{ mensagemErro }}
     </section>
   }
-  @if (livrosEncontrados$ | async) {
+  @if (livrosEncontrados$ | async; as listaLivros) {
     <section
       class="resultados"
       aria-label="Resultados da busca">
         {{ livrosResultado.totalItems }} resultados encontrados
     </section>
-  }
-  @if (livrosEncontrados$ | async) {
-    <ul class="container-card" aria-label="Lista de livros encontrados">
-    @for (livro of listaLivros; track livro.title) {
-      <li>
-        <app-livro [livro]="livro"></app-livro>
-      </li>
-    }
+    <ul
+      class="container-card"
+      aria-label="Lista de livros encontrados">
+      @for (livro of listaLivros; track livro.title) {
+        <li>
+          <app-livro [livro]="livro"></app-livro>
+        </li>
+      }
     </ul>
   } @else {
-      <section
-        class="imagens"
-        aria-label="Página inicial">
-        <h1 class="titulo">Busque o livro <br> que quiser na <br> nossa estante!</h1>
-        <img
-          class="ilustracao"
-          src="assets/imagens/ilustracao-estante.png"
-          alt="Ilustração de uma pessoa em pé ao lado de uma estante com livros e plantas">
-      </section>
-    }
-
-
+    <section
+      class="imagens"
+      aria-label="Página inicial">
+      <h1 class="titulo">Busque o livro <br> que quiser na <br> nossa estante!</h1>
+      <img
+        class="ilustracao"
+        src="assets/imagens/ilustracao-estante.png"
+        alt="Ilustração de uma pessoa em pé ao lado de uma estante com livros e plantas">
+    </section>
+  }
+</section>
