--- a/src/app/pages/lista-livros/lista-livros.component.css
+++ b/src/app/pages/lista-livros/lista-livros.component.css
@@ -1,3 +1,15 @@
+.input-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.lupa {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
+
 .container {
   display: flex;
   justify-content: center;
