--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -11,7 +11,7 @@
   <nav>
     <a
       routerLink="/sobre"
-      aria-label="Informações"
+      aria-label="Mais informações sobre o Buscante"
       routerLinkActive="active-page"
       ariaCurrentWhenActive="page">Sobre
     </a>
