--- a/src/app/pages/modal/modal.component.html
+++ b/src/app/pages/modal/modal.component.html
@@ -1,33 +1,35 @@
 @if (statusModal) {
-  <section *ngIf="statusModal" cdkTrapFocus cdkTrapFocusAutoCapture="true" class="container {{ esconderScroll() }}">
-    <article class="card" role="dialog" aria-modal="true">
-      <img
-        class="imagem"
-        [src]="thumbnailUrl"
-        alt="Capa do livro: {{ livro.title }}"
-      >
-      <section class="info-card">
-        <h2 class="titulo">{{ livro.title }}</h2>
-        <p class="informacoes">Autoria:</p>
-        <p class="resultado">{{ livro.authors }}</p>
-        <p class="informacoes">Data de publicação:</p>
-        <p class="resultado">{{ livro.publishedDate | date:'dd/MM/yyyy' }}</p>
-        <p class="informacoes">Editora:</p>
-        <p class="resultado">{{ livro.publisher }}</p>
-        <div class="botoes">
-          <button (click)="lerPrevia()" [attr.aria-label]="'Ler prévia do livro ' + livro.title" class="detalhes">Ler prévia</button>
-          <button [attr.aria-label]="'Comprar livro: ' + livro.title" class="detalhes">Comprar livro</button>
-        </div>
-      </section>
-      <button aria-label="Fechar" (click)="fecharModal()" class="botao-fechar">
-        <span class="material-symbols-outlined">close</span>
-      </button>
-      <section class="sinopse">
-        <h3 class="informacoes">Sinopse</h3>
-        <p class="resultado">{{ livro.description | slice:0:1000 }}</p>
-      </section>
-    </article>
-    <div class="overlay" (click)="fecharModal()"></div>
-  </section>
+  <dialog>
+    <section *ngIf="statusModal" cdkTrapFocus cdkTrapFocusAutoCapture="true" class="container {{ esconderScroll() }}">
+      <article class="card" role="dialog" aria-modal="true">
+        <img
+          class="imagem"
+          [src]="thumbnailUrl"
+          alt="Capa do livro: {{ livro.title }}"
+        >
+        <section class="info-card">
+          <h2 class="titulo">{{ livro.title }}</h2>
+          <p class="informacoes">Autoria:</p>
+          <p class="resultado">{{ livro.authors }}</p>
+          <p class="informacoes">Data de publicação:</p>
+          <p class="resultado">{{ livro.publishedDate | date:'dd/MM/yyyy' }}</p>
+          <p class="informacoes">Editora:</p>
+          <p class="resultado">{{ livro.publisher }}</p>
+          <div class="botoes">
+            <button (click)="lerPrevia()" [attr.aria-label]="'Ler prévia do livro ' + livro.title" class="detalhes">Ler prévia</button>
+            <button [attr.aria-label]="'Comprar livro: ' + livro.title" class="detalhes">Comprar livro</button>
+          </div>
+        </section>
+        <button aria-label="Fechar" (click)="fecharModal()" class="botao-fechar">
+          <span class="material-symbols-outlined">close</span>
+        </button>
+        <section class="sinopse">
+          <h3 class="informacoes">Sinopse</h3>
+          <p class="resultado">{{ livro.description | slice:0:1000 }}</p>
+        </section>
+      </article>
+      <div class="overlay" (click)="fecharModal()"></div>
+    </section>
+  </dialog>
 }
 
