Remoção de diretiva

--- a/src/app/pages/modal/modal.component.html
+++ b/src/app/pages/modal/modal.component.html
@@ -1,6 +1,6 @@
 @if (statusModal) {
   <dialog>
-    <section *ngIf="statusModal" cdkTrapFocus cdkTrapFocusAutoCapture="true" class="container {{ esconderScroll() }}">
+    <section cdkTrapFocus cdkTrapFocusAutoCapture="true" class="container {{ esconderScroll() }}">
       <article class="card" role="dialog" aria-modal="true">
         <img
           class="imagem"
