Ajustes modal e links, adicionando diretivas

--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,6 +1,6 @@
 <header>
   <a class="logo"
-    routerLink="lista-livros"
+    routerLink="/lista-livros"
     aria-label="Página inicial"
     routerLinkActive="active-page"
     ariaCurrentWhenActive="page">
