--- a/src/app/pages/modal/modal.component.html
+++ b/src/app/pages/modal/modal.component.html
@@ -4,7 +4,7 @@
   cdkTrapFocusAutoCapture="true"
   role="dialog"
   aria-modal="true"
-  class="container {{ esconderScroll() }}">
+  class="container">
   <article class="card">
     <img
       class="imagem"
