--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,25 +1,16 @@
 <header>
   <a class="logo"
-    routerLink="/lista-livros"
-    aria-label="Página inicial"
-    routerLinkActive="active-page"
-    ariaCurrentWhenActive="page">
+    routerLink="/lista-livros">
     <img
       src="assets/imagens/logo.png"
       alt="Logo da aplicação Buscante">
   </a>
   <nav>
     <a
-      routerLink="/sobre"
-      aria-label="Mais informações sobre o Buscante"
-      routerLinkActive="active-page"
-      ariaCurrentWhenActive="page">Sobre
+      routerLink="/sobre">Sobre
     </a>
     <a
-      routerLink="/contato"
-      aria-label="Entre em contato"
-      routerLinkActive="active-page"
-      ariaCurrentWhenActive="page">Contato
+      routerLink="/contato">Contato
     </a>
   </nav>
 </header>
