--- a/src/app/componentes/livro/livro.component.html
+++ b/src/app/componentes/livro/livro.component.html
@@ -1,7 +1,6 @@
 <article class="card-livro">
   <img src="{{ livro.thumbnail || 'assets/imagens/capa-indisponivel.png' }}" alt="Capa do livro">
-  <section class="info-card" role="region" aria-label="Detalhes do livro">
-    <h2 [attr.aria-label]="'Título do livro: ' + livro.title">{{ livro.title | slice:0:30 }}</h2>
+  <section class="info-card">
     <dl>
       <dt class="informacoes">Autoria:</dt>
       <dd class="resultado">{{ livro.authors ? (livro.authors | autoria | slice:0:20) : ''  }}</dd>
@@ -10,7 +9,7 @@
       <dt class="informacoes">Editora:</dt>
       <dd class="resultado">{{ livro.publisher | slice:0:20 }}</dd>
     </dl>
-    <button (click)="onModalChange(true)" aria-label="Mais detalhes sobre o livro">Mais detalhes</button>
+    <button (click)="onModalChange(true)">Mais detalhes</button>
   </section>
 </article>
 @if (modalAberto) {
