--- a/src/app/pages/contato/contato.component.css
+++ b/src/app/pages/contato/contato.component.css
@@ -166,7 +166,7 @@ input::placeholder, textarea::placeholder{
   border: 1px solid red;
 }
 
-.contato-botoes .botao-enviar[aria-disabled="true"] {
+.contato-botoes .botao-enviar {
   background-color: #ccc;
   color: #666;
   cursor: not-allowed;
