--- a/src/app/pages/modal/modal.component.html
+++ b/src/app/pages/modal/modal.component.html
@@ -1,9 +1,5 @@
 <dialog
   [open]="statusModal"
-  cdkTrapFocus
-  cdkTrapFocusAutoCapture="true"
-  role="dialog"
-  aria-modal="true"
   class="container">
   <article class="card">
     <img
@@ -20,11 +16,10 @@
       <p class="informacoes">Editora:</p>
       <p class="resultado">{{ livro.publisher }}</p>
       <div class="botoes">
-        <button (click)="lerPrevia()" [attr.aria-label]="'Ler prévia do livro ' + livro.title" class="detalhes">Ler prévia</button>
-        <button [attr.aria-label]="'Comprar livro: ' + livro.title" class="detalhes">Comprar livro</button>
+        <button (click)="lerPrevia()" class="detalhes">Ler prévia</button>
       </div>
     </section>
-    <button aria-label="Fechar" (click)="fecharModal()" class="botao-fechar">
+    <button (click)="fecharModal()" class="botao-fechar">
       <span class="material-symbols-outlined">close</span>
     </button>
     <section class="sinopse">
