ajustes projeto-base

--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -134,8 +134,7 @@
       </button>
       <button
         type="submit"
-        class="botao-enviar"
-        [disabled]="contatoForm.invalid">Enviar
+        class="botao-enviar">Enviar
       </button>
     </div>
   </form>
