--- a/src/app/pages/modal/modal.component.html
+++ b/src/app/pages/modal/modal.component.html
@@ -27,5 +27,5 @@
       <p class="resultado">{{ livro.description | slice:0:1000 }}</p>
     </section>
   </article>
-  <div class="overlay" (click)="fecharModal()"></div>
+  <div class="overlay"></div>
 </dialog>
