--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -3,6 +3,7 @@
     routerLink="/lista-livros"
     routerLinkActive="active-page"
     ariaCurrentWhenActive="page"
+    aria-label="Página inicial"
     >
     <img
       src="assets/imagens/logo.png"
@@ -12,12 +13,16 @@
     <a
       routerLink="/sobre"
       routerLinkActive="active-page"
-      ariaCurrentWhenActive="page">Sobre
+      ariaCurrentWhenActive="page"
+      aria-label="Mais informações sobre o Buscante"
+    >Sobre
     </a>
     <a
       routerLink="/contato"
       routerLinkActive="active-page"
-      ariaCurrentWhenActive="page">Contato
+      ariaCurrentWhenActive="page"
+      aria-label="Entre em contato"
+    >Contato
     </a>
   </nav>
 </header>
