--- a/src/app/pages/lista-livros/lista-livros.component.html
+++ b/src/app/pages/lista-livros/lista-livros.component.html
@@ -3,6 +3,7 @@
     <label for="campoBusca">Que livro você procura?</label>
     <div class="input-wrapper">
       <input
+        aria-label="Campo de busca"
         #campoBuscaElement
         type="search"
         id="campoBusca"
@@ -13,6 +14,7 @@
   <p>Busque por assunto, autoria, nome...</p>
   @if (mensagemErro) {
     <section
+      aria-label="Mensagem de erro"
       role="alert"
       class="resultados mensagem-erro">
         {{ mensagemErro }}
@@ -20,10 +22,12 @@
   }
   @if (livrosEncontrados$ | async; as listaLivros) {
     <section
+      aria-label="Resultados da busca"
       class="resultados">
         {{ livrosResultado.totalItems }} resultados encontrados
     </section>
     <ul
+      aria-label="Lista de livros encontrados"
       class="container-card">
       @for (livro of listaLivros; track livro.title) {
         <li>
@@ -33,6 +37,7 @@
     </ul>
   } @else {
     <section
+      aria-label="Página inicial"
       class="imagens">
       <h1 class="titulo">Busque o livro <br> que quiser na <br> nossa estante!</h1>
       <img
