--- a/src/app/pages/modal/modal.component.html
+++ b/src/app/pages/modal/modal.component.html
@@ -1,4 +1,6 @@
 <dialog
+  cdkTrapFocus
+  cdkTrapFocusAutoCapture="true"
   [open]="statusModal"
   class="container">
   <article class="card">
@@ -17,6 +19,7 @@
       <p class="resultado">{{ livro.publisher }}</p>
       <div class="botoes">
         <button [attr.aria-label]="'Ler prévia do livro' + livro.title" (click)="lerPrevia()" class="detalhes">Ler prévia</button>
+        <button class="detalhes">Comprar livro</button>
       </div>
     </section>
     <button aria-label="Fechar modal" (click)="fecharModal()" class="botao-fechar">
