previne comportamento padrão do formulário

--- a/src/app/pages/lista-livros/lista-livros.component.html
+++ b/src/app/pages/lista-livros/lista-livros.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <form class="busca">
+  <form (submit)="$event.preventDefault()" class="busca">
     <label for="campoBusca">Que livro você procura?</label>
     <div class="input-wrapper">
       <input
