style: formata código com prettier

--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,13 +1,12 @@
 <header>
-  <a class="logo"
+  <a
+    class="logo"
     routerLink="/lista-livros"
     routerLinkActive="active-page"
     ariaCurrentWhenActive="page"
     aria-label="Página inicial"
-    >
-    <img
-      src="assets/imagens/logo.png"
-      alt="Logo da aplicação Buscante">
+  >
+    <img src="assets/imagens/logo.png" alt="Logo da aplicação Buscante" />
   </a>
   <nav>
     <a
@@ -15,15 +14,14 @@
       routerLinkActive="active-page"
       ariaCurrentWhenActive="page"
       aria-label="Mais informações sobre o Buscante"
-    >Sobre
+      >Sobre
     </a>
     <a
       routerLink="/contato"
       routerLinkActive="active-page"
       ariaCurrentWhenActive="page"
       aria-label="Entre em contato"
-    >Contato
+      >Contato
     </a>
   </nav>
 </header>
-
