--- a/src/app/componentes/cabecalho/cabecalho.component.css
+++ b/src/app/componentes/cabecalho/cabecalho.component.css
@@ -1,16 +1,16 @@
 header {
-  background-color: #050C42;
+  background-color: #050c42;
   height: 96px;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content:space-around;
-  font-family: 'Poppins', sans-serif;
+  justify-content: space-around;
+  font-family: "Poppins", sans-serif;
 }
 
 header a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -25,8 +25,8 @@ header a {
 }
 
 header .active-page {
-  background-color: #6C63FF;
+  background-color: #6c63ff;
 }
 header .active-page.logo {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
