--- a/src/app/componentes/livro/livro.component.html
+++ b/src/app/componentes/livro/livro.component.html
@@ -1,14 +1,21 @@
 <article class="card-livro">
-  <img src="{{ livro.thumbnail || 'assets/imagens/capa-indisponivel.png' }}" alt="Capa do livro">
+  <img
+    src="{{ livro.thumbnail || 'assets/imagens/capa-indisponivel.png' }}"
+    alt="Capa do livro"
+  />
   <section role="region" aria-label="Detalhes do livro" class="info-card">
-    <h2 [attr.aria-label]="'Título do livro' + livro.title ">{{ livro.title | slice:0:30 }}</h2>
+    <h2 [attr.aria-label]="'Título do livro' + livro.title">
+      {{ livro.title | slice: 0 : 30 }}
+    </h2>
     <dl>
       <dt class="informacoes">Autoria:</dt>
-      <dd class="resultado">{{ livro.authors ? (livro.authors | autoria | slice:0:20) : ''  }}</dd>
+      <dd class="resultado">
+        {{ livro.authors ? (livro.authors | autoria | slice: 0 : 20) : "" }}
+      </dd>
       <dt class="informacoes">Data de publicação:</dt>
-      <dd class="resultado">{{ livro.publishedDate | date:'dd/MM/yyyy' }}</dd>
+      <dd class="resultado">{{ livro.publishedDate | date: "dd/MM/yyyy" }}</dd>
       <dt class="informacoes">Editora:</dt>
-      <dd class="resultado">{{ livro.publisher | slice:0:20 }}</dd>
+      <dd class="resultado">{{ livro.publisher | slice: 0 : 20 }}</dd>
     </dl>
     <button (click)="onModalChange(true)">Mais detalhes</button>
   </section>
@@ -18,5 +25,3 @@
     <app-modal [livro]="livro" (mudouModal)="onModalChange($event)"></app-modal>
   </ng-container>
 }
-
-
