--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
 * {
   margin: 0;
   padding: 0;
 }
 
-h1, h2, h3 {
-  font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3 {
+  font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -31,11 +32,10 @@ body {
 }
 
 button:hover {
-  background: #050C42;
+  background: #050c42;
   transition: all 0.5s ease-in;
-  border: 2px solid #050C42;
+  border: 2px solid #050c42;
 }
-
 
 body {
   overflow-x: hidden;
